# qmlhct

./: .gitignore  .gitmodules  CMakeLists.txt  DynamicSchemeView.qml  HctView.qml  License.txt  Main.qml  README.md  main.cpp  material_color_utilities.cmake  qml.qrc
demo/: CMakeLists.txt
demo/dynamicscheme/: CMakeLists.txt  DynamicSchemeView.qml  Main.qml  main.cpp  qml.qrc
demo/hcttorgb/: CMakeLists.txt  Main.qml
include/qmlmaterialcolorutilities/: Hct.h
materialcolorutilities/: MaterialColorUtilities.cmake  cpp_build_fix.patch
src/: CMakeLists.txt  DynamicScheme.cpp  DynamicSchemeImpl.cpp  DynamicSchemeImpl.h  Hct.cpp  HctImpl.h
src/include/qmlmaterialcolorutilities/: DynamicScheme.h  Hct.h
